# bill-scanner

./: .gitignore  debug.cjs  package-lock.json  package.json  vite.config.ts
.github/workflows/: backend-ci.yml  deploy.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: api.py  db.py  limiter.py  main.py  middleware.py  repository.py  schemas.py  settings.py
backend/app/engine/: base.py  onnx_recognizer.py  postprocess.py  preprocess.py
backend/migrations/: 0001_telemetry.sql
backend/models/: en_PP-OCRv5_mobile_rec.meta.json
backend/scripts/: import_geoip.py  migrate.py  smoke_samples.py
backend/tests/: conftest.py  test_api.py  test_engine_local_samples.py  test_postprocess.py  test_settings.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: CNAME
frontend/scripts/: e2e-local.cjs
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: FeedbackModal.tsx
frontend/src/lib/: analytics.ts  api.ts  clientIdentity.ts  config.ts
scripts/: patch-paddle-ocr-leaks.cjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/lib/: paddle-ocr.ts
